--- a/index.html
+++ b/index.html
@@ -10,6 +10,13 @@
       background-size: cover;
     }
     a{
+
+
+  font-family: "Comfortaa", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: <weight>;
+  font-style: normal;
+
       color: rgb(255, 255, 255);
       text-decoration: none;
       font-family: Arial, Helvetica, sans-serif;
@@ -20,7 +27,9 @@
       color: rgb(177, 69, 87);
     }
     p{
-      ;font-family: Arial, Helvetica, sans-serif;
+      font-family: "Barriecito", system-ui;
+      font-weight: 400;
+      font-style: normal;
       font-size: 18px;
       color: rgb(255, 255, 255)
     }
@@ -30,6 +39,12 @@
       text-align: center;
     }
   </style>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Barriecito&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Barriecito&family=Comfortaa:wght@300..700&display=swap" rel="stylesheet">
 </head>
 <body>
   <h1>
